Added page title to index.html

--- a/visualizacao/index.html
+++ b/visualizacao/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Dataset de Fake News INTERFACES</title>
+</head>
 <body>
 <h1>Dataset de Fake News INTERFACES<h1>
 <h2>Dados</h2>
